--- a/git/index.html
+++ b/git/index.html
@@ -29,7 +29,7 @@
                 }
             </script>
 
-            <link rel="icon" href="images/favicon.ico" >
+            <link rel="icon" href="images/logos/favicon.ico" >
         </head>
 
         <body>
@@ -64,8 +64,27 @@
                         </p>
                         <p><a href="https://github.com/diogomg" target="_blank"><b>github.com/diogomg</b></a></p>
                         <p><a href="https://github.com/UTFPR-PG" target="_blank"><b>github.com/UTFPR-PG</b></a></p>
+
+                        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+                            <img alt="Licença Creative Commons" style="border-width:0"
+                            src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
                     </section>
 
+                    <section>
+                        <h2>Licença</h2>
+                        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+                            <img alt="Licença Creative Commons" style="border-width:0"
+                            src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+                        <br/><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">
+                            Esta apresentação está licenciada com uma Licença
+                            <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+                                Creative Commons - Atribuição 4.0 Internacional</a>.
+                                <br />Podem estar disponíveis autorizações adicionais
+                                 às concedidas no âmbito desta licença em
+                                 <a xmlns:cc="http://creativecommons.org/ns#"
+                                 href="www.github.com/UTFPR-PG/minicursos"
+                                 rel="cc:morePermissions">github.com/UTFPR-PG/minicursos</a>.
+                    </section>
                     <section>
                         <section>
                             <h2>História</h2>
@@ -174,8 +193,7 @@
 
                         <section>
                             <h2>Quem usa Git?</h2>
-                            <img src="images/quem_usa_git.png"
-                                style="width: 926px; height: 171px; border: 1px solid #000000;">
+                            <img src="images/quem_usa_git.png" style="width: 926px; height: 171px; border: 1px solid #000000;">
                             <p><b><a href="http://git-scm.com/" target="_blank">git-scm.com</b></a></p>
                         </section>
 
@@ -430,14 +448,14 @@
                             <p>O Git permite criar uma linha independente de desenvolvimento
                             no seu projeto. Isto permite alterações em partes especificas do software
                             sem comprometer o restante do projeto.</p>
-                            <img src="images/branch_example.png" style="width: 50%; height: 50%;">
+                            <img src="images/branch_example.png" style="width: 546px; height: 326px;">
                         </section>
 
                         <section>
                             <h2>Ramificando a produção de software</h2>
                             <p>O comando <i>git branch</i> cria um novo branch a partir do último commit.</p>
                             <pre style="background-color: #4C4C4C;"><p style="color: white; font-size: 150%;">git branch nome_branch</p></pre>
-                            <img src="images/after_branch.png" style="width: 50%; height: 50%;">
+                            <img src="images/after_branch.png" style="width: 504px; height: 332px;">
                         </section>
 
                         <section>
@@ -445,8 +463,8 @@
                             <p>Além de visualizar commits antigos, o <i>git checkout</i>
                             também é o responsável por alterar o branch corrente.</p>
                             <pre style="background-color: #4C4C4C;"><p style="color: white; font-size: 150%;">git checkout nome_branch</p></pre>
-                            <img align=left src="images/before_checkout_branch.png" style="width: 50%; height: 50%;">
-                            <img align=right src="images/after_checkout_branch.png" style="width: 50%; height: 50%;">
+                            <img align=left src="images/before_checkout_branch.png" style="width: 477px; height: 396px;">
+                            <img align=right src="images/after_checkout_branch.png" style="width: 477px; height: 396px;">
                         </section>
 
                         <section>
@@ -462,8 +480,8 @@
                             <h2>Unindo ramificações</h2>
                             <p>Quando não há commits posteriores à criação do branch, a incorporação das
                             funcionalidades ocorre sem nenhum problema.</p>
-                            <img align=left src="images/before_simple_merge.png" style="width: 50%; height: 50%;">
-                            <img align=right src="images/after_simple_merge.png" style="width: 50%; height: 50%;">
+                            <img align=left src="images/before_simple_merge.png" style="width: 460px; height: 215px;">
+                            <img align=right src="images/after_simple_merge.png" style="width: 456px; height: 248px;">
                         </section>
 
                         <section>
@@ -477,7 +495,7 @@
                             <h2>Unindo ramificações</h2>
                             <p>Algumas vezes o Git pode não saber que modificações escolher quando dois
                             branches alteram o mesmo trecho de código.</p>
-                            <img src="images/conflict.png" style="width: 100%; height: 100%;">
+                            <img src="images/conflict.png" style="width: 777px; height: 194px;">
                         </section>
 
                         <section>
@@ -488,7 +506,7 @@
                             linhas desnecessárias do arquivo, mantendo conteúdo escolhido,
                             e efetuar um novo commit. Este é basicamente o único trabalho
                             manual que o Git necessita</p>
-                            <img src="images/solving_conflict.png" style="width: 100%; height: 100%;">
+                            <img src="images/solving_conflict.png" style="width: 777px; height: 154px;">
                             <p><b>Fonte: <a href="http://git-scm.com/book/en/Git-Branching-Basic-Branching-and-Merging" target="_blank">git-scm/book</b></a></p>
                         </section>
 
@@ -524,8 +542,8 @@
                                 Muitas empresas possuem servidores dedicados para suas equipes,
                                 mas há algumas soluções no mercados que cumprem a mesma função.
                             </p>
-                            <img align=left src="images/logos/bitbucket_logo.png" style="width: 50%; height: 50%;">
-                            <img align=right src="images/logos/gitlab_logo.png" style="width: 50%; height: 50%;">
+                            <img align=left src="images/logos/bitbucket_logo.png" style="width: 434px; height: 125px;">
+                            <img align=right src="images/logos/gitlab_logo.png" style="width: 420px; height: 120px;">
                         </section>
 
                         <section>
