adicionado slide mensagens intuitivas

--- a/git/index.html
+++ b/git/index.html
@@ -260,6 +260,7 @@
                                 <p align=center>Distribuido</p>
                                 <img align=center src="images/distributed_vcs.png"
                                     style="width: 457px; height: 253px; border:none;">
+                                <p><b>Imagens: <a href="http://slides.com/borjagorrizhernando/git-in-context#/" target="_blank">Borja Gorriz Hernando</b></a></p>
                             </div>
                         </section>
 
@@ -337,6 +338,15 @@
                             <p><i>git commit</i> transfere o estado do projeto salvo na staging area para o repositório do projeto.</p>
                             <p>Simplificando, ele confirma as suas modificações, criando um novo estado ou "ponto de referência" para o seu projeto. Todo commit é associado à um <i>checksum</i> para poder ser
                             referenciado posteriormente.</p>
+                        </section>
+
+                        <section>
+                            <h2></h2>
+                            <p>Todo <i>commit</i> <b>deve</b> possuir uma mensagem de identificação, usada para descrever as alterações do <i>commit</i>. Favor, use-a para tal fim.</p>
+                            <p>Exemplo de como não se fazer um <i>commit</i>. Escreva mensagens intuitívas.</p>
+                            <img src="images/mensagens_intuitivas.jpg"
+                                style="width: 528px; height: 484px; border: 1px solid #000000;">
+                                <p><b align=right>Fonte</b>: algum lugar na interwebs.</p>
                         </section>
 
                         <section>
