adicionada referencias sob copyright

--- a/git/index.html
+++ b/git/index.html
@@ -341,7 +341,6 @@
                         </section>
 
                         <section>
-                            <h2></h2>
                             <p>Todo <i>commit</i> <b>deve</b> possuir uma mensagem de identificação, usada para descrever as alterações do <i>commit</i>. Favor, use-a para tal fim.</p>
                             <p>Exemplo de como não se fazer um <i>commit</i>. Escreva mensagens intuitívas.</p>
                             <img src="images/mensagens_intuitivas.jpg"
@@ -634,10 +633,16 @@
                         </section>
 
                         <section>
-                            <h2>Conteúdo sob licença creative commons</h2>
+                            <h2>Conteúdo sob <i>Copyleft</i></h2>
                             <p><a href="https://www.youtube.com/user/GitHubGuides" target="_blank"><b>youtube.com/GitHubGuides</b></a></p>
                             <p><a href="http://git-scm.com/book" target="_blank"><b>git-scm.com/book</b></a></p>
                             <p><a href="https://www.atlassian.com/git/tutorials/" target="_blank"><b>atlassian.com/git/tutorials</b></a></p>
+                        </section>
+
+                        <section>
+                            <h2>Conteúdo sob <i>Copyright</i></h2>
+                            <p><a href="" target="_blank"><b>Version Control with Git, Second Edition</b></a></p>
+                            <p><a href="" target="_blank"><b>Git Pocket Guide</b></a></p>
                         </section>
 
                     </section>
