corrigida algumas acentuacoes

--- a/git/index.html
+++ b/git/index.html
@@ -257,7 +257,7 @@
                                     style="width: 315px; height: 273px; border:none;">
                             </div>
                             <div style="width: 460px; height:300px; position: absolute; right: 0px;">
-                                <p align=center>Distribuido</p>
+                                <p align=center>Distribuído</p>
                                 <img align=center src="images/distributed_vcs.png"
                                     style="width: 457px; height: 253px; border:none;">
                                 <p><b>Imagens: <a href="http://slides.com/borjagorrizhernando/git-in-context#/" target="_blank">Borja Gorriz Hernando</b></a></p>
@@ -281,7 +281,7 @@
 
                     <section>
                         <section>
-                            <h2>Vamos à pratica!</h2>
+                            <h2>Vamos à prática!</h2>
                             <img align=center src="images/octocat/baracktocat.jpg"
                                 style="width: 537px; height: 537px; border: 1px solid #000000;">
                         </section>
