--- a/git/index.html
+++ b/git/index.html
@@ -82,7 +82,7 @@
                                 <br />Podem estar disponíveis autorizações adicionais
                                  às concedidas no âmbito desta licença em
                                  <a xmlns:cc="http://creativecommons.org/ns#"
-                                 href="www.github.com/UTFPR-PG/minicursos"
+                                 href="https://www.github.com/UTFPR-PG/minicursos"
                                  rel="cc:morePermissions">github.com/UTFPR-PG/minicursos</a>.
                     </section>
                     <section>
